Fix up jumpy behaviour when going to the start of a chapter due to the fact that it was trying to scroll the start of the chapter into the middle of the screen, but there was nothing above, so it couldn't.
This now has a filler which takes up the top 120px of the screen. It says loading..., but the user shouldn't really see it. Possibly the text "loading..." should be removed.

--- a/branches/xul/chrome/skin/standard/bpbible_html.css
+++ b/branches/xul/chrome/skin/standard/bpbible_html.css
@@ -334,6 +334,18 @@ div.no_more_text {
 	color: #888;
 }
 
+div.page_segment[empty] {
+	height: 120px;
+	position: relative;
+}
+
+div.no_more_text.end-start {
+	position: absolute;
+	bottom: 0;
+	left: 0;
+	right: 0;
+}
+
 div.segment.nocontent {
 	display: none;
 }
